# google-adk-examples-1

./: .gitignore  HOW_TO_CREATE_AN_AGENT.md  db_loop_agent.db  db_parallel_agent.db  pyproject.toml  use_loop_agent.py  use_parallel_agents.py  use_sequential_agent.py
agent-memory/: adk_interaction_flow.md  adk_session_history_debugging.md  adk_tool_state_management.md  agent_autonomy_and_prompts.md  agent_creation.md  agent_instruction_tool_debugging.md  agents_usage.md  architecture_changes.md  git_configuration.md  project_memory.md  pydantic_validation.md  runner_initialization.md  runners.md  tool_modification.md
documentations/: ADK_documentation_plan.md  ADK_documentation_progress.md  agents_list_doc.md  agents_module_deep_dive.md  agents_module_surface.md  cli_quickstart.md  documentation_memory_rules.md  example_stateful_inmemorysessionservice.md  future_todo_list.md  memory_module_deep_dive.md  memory_module_surface.md  memory_usage_examples.md  quickstart_draft.md  runners_module_surface.md  runners_usage_examples.md  tools_module_surface.md
prompts/: network_system_agent_prompt.py  python_expert_agent_prompt.py  python_refiner_agent_prompt.py  python_reviewer_agent_prompt.py  query_generation_agent_prompt.py  reviewer_agent_prompt.py  summarize_prompt.py  system_info_agent_prompt.py  task_planner_prompt.py  team_manager_prompt.py  web_scrape_single_page_prompt.py  web_search_prompt.py
tests/: gemini_image_test.py
tools/: control_tools.py  network_info_tool.py  serper_scrape_single_page_tool.py  system_info_tool.py
utils/: before_model_callback.py
(+47 files in other folders)
